onar fixes